5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1616_2938.log
== TEST (2019-04-01 15:14:25) 
-- CODE:
from math import* 
d1 = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
d2 = float(input(sqrt(a**2 + c**2) - (2*a)*(2*c)*(45radians))
ang = 45 
c = (sqrt(a**2 + b**2) - (2*a)*(2*b)*(45 radians))	  
print(round(c,2)	  
-- ERROR:
File "XXXX", line 2
    d1 = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:13) 
-- CODE:
from math import* 
d1 = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
d2 = float(input(sqrt(a**2 + c**2) - (2*a)*(2*c)*(45radians))
ang = 45 
c = float(input(sqrt(a**2 + b**2) - (2*a)*(2*b)*(45 radians))	  
print(round(c,2)	  
-- ERROR:
File "XXXX", line 2
    d1 = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:29:25) 
-- CODE:
from math import* 
a = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
b = float(input(sqrt(a**2 + c**2) - (2*a)*(2*c)*(45radians))
ang = 45 
c = float(input(sqrt(a**2 + b**2) - (2*a)*(2*b)*(45radians))	  
print(round(c,2)	  
-- ERROR:
File "XXXX", line 2
    a = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:40) 
-- CODE:
from math import* 
a = 5
b = 2


da = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
db = float(input(sqrt(a**2 + c**2) - (2*a)*(2*c)*(45radians))
ang = 45 
c = float(input(sqrt(a**2 + b**2) - (2*a)*(2*b)*(45radians))	  
print(round(c,2)	  
-- ERROR:
File "XXXX", line 6
    da = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:38:06) 
-- CODE:
from math import* 
a = 5
b = 2


da = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
db = float(input(sqrt(a**2 + c**2) - (2*a)*(2*c)*(45radians))
ang = 45 
c = float(sqrt(a**2 + b**2) - (2*a)*(2*b)*(45radians))	  
print(round(c,2)	  
-- ERROR:
File "XXXX", line 6
    da = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:22) 
-- CODE:
from math import* 
a = 5
b = 2


da = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
db = float(input(sqrt(a**2 + c**2) - (2*a)*(2*c)*(45radians))
an = float(input(radians(45) 
c = float(sqrt(a**2 + b**2) - (2*a)*(2*b)*(45radians))	  
print(round(c,2)	  
-- ERROR:
File "XXXX", line 6
    da = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:49) 
-- CODE:
from math import* 
a = 5
b = 2


da = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
db = float(input(sqrt(a**2 + c**2) - (2*a)*(2*c)*(45radians))
an = float(input(45radians)) 
c = float(sqrt(a**2 + b**2) - (2*a)*(2*b)*(45radians))	  
print(round(c,2)	  
-- ERROR:
File "XXXX", line 6
    da = float(input(sqrt(b**2 + c**2) - (2*b)*(2*c)*(45radians))
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
